gop/ironGallery/iron-gallery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iron-gallery
  labels:
    name: iron-gallery
spec:
  replicas: 1
  selector:
    matchLabels:
      run: iron-gallery
  template:
    metadata:
      name: iron-gallery
      labels:
        run: iron-gallery
    spec:
      containers:
      - name: iron-gallery
        image: kodekloud/irongallery:2.0
        resources:
#          requests:
#            memory: "64Mi"
#            cpu: "250m"
          limits:
            memory: "100Mi"
            cpu: "50m"            
        volumeMounts:
        - mountPath: /usr/share/nginx/html/data
          name: config
        - mountPath: /usr/share/nginx/html/uploads
          name: images
         
      volumes:
      - name: config  
        emptyDir: {}
      - name: images
        emptyDir: {}
