gop/ironGallery/iron-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iron-db-service
spec:
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
  selector:
    db: mariadb
