gop/ironGallery/iron-gallery-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iron-gallery-service
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    run: iron-gallery
