gop/ironGallery/ingress.yaml
apiVersion: extensions/v1beta1
#networking.k8s.io/v1
kind: Ingress
metadata:
  name: iron-gallery-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
 #       pathType: Prefix
        backend:
          serviceName: iron-gallery-service
          servicePort: 80
